--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.application.name=workout-service
 eureka.client.serviceUrl.defaultZone=https://eureka-service-discovery.herokuapp.com/eureka
 spring.cloud.discovery.enabled=true
 keycloak.realm=Pantofit
-keycloak.resource=client-service
+keycloak.resource=workout-service
 keycloak.auth-server-url=https://keycloakpantofit.herokuapp.com/auth
 keycloak.bearer-only=true
 keycloak.cors=true
